--- a/html/index.html
+++ b/html/index.html
@@ -1,54 +1,87 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html> 
+<html>
+<head>
+<title>Fiat lux!</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head> 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>index</title>
-<meta http-equiv="imagetoolbar" content="false">
-<link rel="stylesheet" type="text/css" href="./css/index-maina.css" >
-<script src="jquery.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="css/bootstrap.min.css" >
+<script src="css/jquery.min.js"></script>
+<script src="css/popper.min.js"></script>
+<script src="css/bootstrap.min.js"></script>
+
 <script type="text/javascript">
+    function light(button){
+	var buttons = [0, 96, 120, 24, 80, 48, 108, 12, 72, 40, 106];
+	$.ajax({url: 'cgi-bin/livolo.sh?button=' + buttons[button]});
+	console.log(buttons[button]);
+    }
 
-	$(function () {
-	  $("#btn1").click(function () {
-		// apeleaza /home/stefan/livolo/livolo;
-		document.body.style.background = "red";
-		$.ajax({
-		    url : 'run.php',
-		    success: function(data) {
-				    console.log("OK");
-				    console.log(data);
-				},
-		    error: function(data) {
-				    console.log("KO");
-				    console.log(data);
-				}
-		    });
-	  });
-	});
+    function powerOn(){ 
+	$.ajax({url: 'cgi-bin/poweron.sh'});
+    }
 
-	$(function () {
-	  $("#btn2").click(function () {
-		// apeleaza livolo 8;
-		document.body.style.background = "white";
-	  });
-	});
+    function getTemp(){
+	$.getJSON("cgi-bin/temperature.sh",
+	    function(response){
+		console.log(response);
+		document.getElementById("temp").innerHTML = response.temp + "&#x2103";
+	    } 
+	);
+    }
+
+    function updateTemp(){
+	document.getElementById("temp").innerHTML = "23.75" + "&#x2103";
+    }
+
+    window.onload = getTemp;
 
 </script>
-</head> 
+</head>
 
 <body>
 
-<div id="centered">
-
-    <div id="btn1">
-        <img src="./geometry/on.png"/>
+<div class="container-fluid">
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-primary btn-lg btn-block" onClick=powerOn()>Computer <span id="temp" class="badge">00.00 &#x2103;</span></button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(0) >Living 1</button> </div>
+	<div class="col-md-3"></div>
     </div>
 
-    <div id="btn2">
-        <img src="./geometry/off.png"/>
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(1)>Living 2</button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(2)>Living 3</button> </div>
+	<div class="col-md-3"></div>
     </div>
 
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(3) >Terasa</button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(4)>Bucatarie</button> </div>
+	<div class="col-md-3"></div>
+    </div>
+
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(5) >Hol jos</button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(9) >Hol sus</button> </div>
+	<div class="col-md-3"></div>
+    </div>
+
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(6)>Vestibul inauntru</button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(7) >Vestibul afara</button> </div>
+	<div class="col-md-3"></div>
+    </div>
+
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(8) >Birou</button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-warning btn-lg btn-block" onClick=light(10) >All off</button> </div>
+	<div class="col-md-3"></div>
+    </div>
 </div>
-</body> 
-</html> 
+
+</body>
+</html>
