--- a/html/index.html
+++ b/html/index.html
@@ -19,14 +19,22 @@
 	$.ajax({url: 'cgi-bin/poweron.sh'});
     }
 
+    function lightOutside(button){
+	$.ajax({url: 'cgi-bin/lightOutside.sh?button='+ button});
+    }
+
+    function relay(pin, state){ 
+	$.ajax({url: 'cgi-bin/relay.sh?pin=' + pin + '&state=' + state});
+    }
+
     function getTemp(){
 	$.getJSON("cgi-bin/temperature.sh",
-	    function(response){
+		function(response){
 		console.log(response);
 		document.getElementById("temp").innerHTML = response.temp + "&#x2103";
-	    } 
+		} 
 	);
-    }
+}
 
     function updateTemp(){
 	document.getElementById("temp").innerHTML = "23.75" + "&#x2103";
@@ -79,6 +87,35 @@
 	<div class="col-md-3"></div>
 	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=light(8) >Birou</button> </div>
 	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-warning btn-lg btn-block" onClick=light(10) >All off</button> </div>
+	<div class="col-md-3"></div>
+    </div>
+
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-3 col-md-1"><br/> <button type="button" class="btn btn-success btn-lg btn-block" onClick=relay(2,1) >2 ON</button> </div>
+	<div class="col-md-1"></div>
+	<div class="col-xs-3 col-md-1"><br/> <button type="button" class="btn btn-danger  btn-lg btn-block" onClick=relay(2,0) >2 OFF</button> </div>
+	<div class="col-xs-3 col-md-1"><br/> <button type="button" class="btn btn-success btn-lg btn-block" onClick=relay(3,1) >3 ON</button> </div>
+	<div class="col-md-1"></div>
+	<div class="col-xs-3 col-md-1"><br/> <button type="button" class="btn btn-danger  btn-lg btn-block" onClick=relay(3,0) >3 OFF</button> </div>
+	<div class="col-md-3"></div>
+    </div>
+
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-3 col-md-1"><br/> <button type="button" class="btn btn-success btn-lg btn-block" onClick=relay(4,1) >4 ON</button> </div>
+	<div class="col-md-1"></div>
+	<div class="col-xs-3 col-md-1"><br/> <button type="button" class="btn btn-danger  btn-lg btn-block" onClick=relay(4,0) >4 OFF</button> </div>
+	<div class="col-xs-3 col-md-1"><br/> <button type="button" class="btn btn-success btn-lg btn-block" onClick=relay(6,1) >P ON</button> </div>
+	<div class="col-md-1"></div>
+	<div class="col-xs-3 col-md-1"><br/> <button type="button" class="btn btn-danger  btn-lg btn-block" onClick=relay(6,0) >P OFF</button> </div>
+	<div class="col-md-3"></div>
+    </div>
+
+    <div class="row">
+	<div class="col-md-3"></div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=relay(5,1) >Gradin ON</button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-warning btn-lg btn-block" onClick=relay(5,0) >Gradina OFF</button> </div>
 	<div class="col-md-3"></div>
     </div>
 </div>
