--- a/html/index.html
+++ b/html/index.html
@@ -114,8 +114,8 @@
 
     <div class="row">
 	<div class="col-md-3"></div>
-	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=relay(5,1) >Gradin ON</button> </div>
-	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-warning btn-lg btn-block" onClick=relay(5,0) >Gradina OFF</button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-info btn-lg btn-block" onClick=relay(8,1) >Gradina ON</button> </div>
+	<div class="col-xs-6 col-md-3"><br/> <button type="button" class="btn btn-warning btn-lg btn-block" onClick=relay(8,0) >Gradina OFF</button> </div>
 	<div class="col-md-3"></div>
     </div>
 </div>
